Add swagger documentation to assignmentSubmission create + fix bug
